2023-08-10 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSNumberFormatter.h:
	* Source/NSNumberFormatter.m:
	Change NSNumberFormatter minimum/maximum properties from
	NSDecimalNumber to NSNumber to match Apple platforms.

2023-07-30  Yavor Doganov  <yavor@gnu.org>

	* Tools/HTMLLinker.1: Fix a groff warning.

2023-07-30  Yavor Doganov  <yavor@gnu.org>

       * Tools/gdnc.m ([GDNCServer init]):
       * Tools/gspath.1: Fix spelling errors.

2023-07-26 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSData.m:
	Fix NSData initWithContentsOfURL: caching data of file URLs.

2023-07-26 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSURL.m:
	* Tests/base/NSURL/basic.m:
	Fix NSURL path on Windows for UNC paths.

2023-07-25 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSFileManager.h:
	* Source/NSFileManager.m:
	Fixed NSFileManager thread safety.

2023-07-17  Yavor Doganov  <yavor@gnu.org>

	* Tests/base/NSTimeZone/localtime.m (testTZDB): Skip tests relying
	on 64bit time_t on all 32bit architectures.
	* Source/NSTimeZone.m: Move #include "tzdb.h" a bit earlier so
	that the POSIX_TZONES preprocessor conditional is correct.
	([GSTimeZoneDetail
	initWithTimeZone:withAbbrev:withOffset:withDST:]): Retain abbrev.
	([GSTimeZoneDetail dealloc]): Release abbrev.
	([NSTimeZone timeZoneArray]): Skip files *.zi, *.list and
	leapseconds which are not zone files.

2023-06-10 Riccardo Mottola <rm@gnu.org>

	* Tests/base/NSURL/Helpers/Launch.h:
	Declare method in interface to provide accurate signature fixing
	bug on sparc 64

2023-06-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: close socket if we end loading with an
	I/O operation in progress.

2023-06-15 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m: Fix to reliably remove handle from run loop
	when -dealloc is called without the handle having been closed first.

2023-05-08 Richard Frith-Macdonald <rfm@gnu.org>
