@@ -1,3 +1,9 @@
+2023-08-18 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Headers/Foundation/NSCache.h: Add _lock ivar
+	* Source/NSCache.m: Protect cache operations with a lock for
+	thread safety.
+	
 2023-08-10 Frederik Seiffert <frederik@algoriddim.com>
 
 	* Headers/Foundation/NSNumberFormatter.h:
